<resources>
    <string name="app_name">Catholic Bible</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="impostazioni">Settings</string>
    <string name="credits">Credits</string>
    <string name="messaggio_articolo_aggiunto">Chapter added to the bookmarks</string>
    <string name="messaggio_articolo_rimosso">Chapter removed from the bookmarks</string>
    <string name="send_to">Send to:</string>
    <string name="empty_list">No result</string>
    <string name="empty_list_bookmark">No bookmarks</string>
    <string name="share">Share</string>
    <string name="confronta">Compare with another version</string>
    <string name="cambia_versione">Change Bible version</string>
    <string name="apri_contesto">Open reading in its context</string>
    <string name="mostra_note">Show notes</string>
    <string name="nascondi_note">Hide notes</string>
    <string name="imp_generali">General</string>
    <string name="imp_avanzate">Advanced</string>
    <string name="imp_letture_giorno">Daily Reading</string>
    <string name="imp_versetti">Verses</string>
    <string name="imp_versetti_des">Shows the number of the verse</string>
    <string name="imp_titoli">Titles</string>
    <string name="imp_titoli_des">Show titles</string>
    <string name="imp_note">Notes</string>
    <string name="imp_note_des">Show chapter\'s notes</string>
    <string name="imp_leggi">Read aloud</string>
    <string name="imp_leggi_des">Show button for starting read aloud</string>
    <string name="imp_nascondi_toolbar">Hide Toolbar</string>
    <string name="imp_nascondi_toolbar_des">Automatically hide the Toolbar</string>
    <string name="imp_acc">HW Acceleration</string>
    <string name="imp_acc_des">Disable if you have problems in reading</string>
    <string name="imp_svuota_cronologia">Empty the history</string>
    <string name="imp_svuota_cronologia_des">Clear the history on app exit</string>
    <string name="imp_vers_bibbia">Version</string>
    <string name="imp_vers_bibbia_des">Bible version</string>
    <string name="imp_vers_bibbia_default">inglese-cpdv</string>
    <string name="imp_lingua">Language</string>
    <string name="imp_lingua_des">Application language</string>
    <string name="imp_lingua_default">en</string>
    <string name="imp_tema">Theme</string>
    <string name="imp_tema_des">Choose a theme</string>
    <string name="imp_colore">Primary color</string>
    <string name="imp_colore_des">The most used color in application</string>
    <string name="imp_colore_evidenziazione">Highlighting color</string>
    <string name="imp_colore_evidenziazione_des">The color used to highlight saved verses</string>
    <string name="imp_tema_default">light</string>
    <string name="imp_lit_epifania_festiva_des">Deselect if in your country Epiphany fall on Sunday</string>
    <string name="imp_lit_epifania_festiva">Epiphany on 6th January</string>
    <string name="imp_lit_mostra_versetti_des">Show verse number in the daily Reading</string>
    <string name="imp_lit_mostra_versetti">Show verses</string>
    <string name="imp_accenti_des">Disable if you don\'t see some letters while reading</string>
    <string name="imp_accenti">Show accents in Greek</string>
    <string name="imp_schermo_acceso">Screen always-on</string>
    <string name="imp_schermo_acceso_des">Set the screen always-on while reading</string>
    <string name="title_anticoTestamento">Old Testament</string>
    <string name="title_nuovoTestamento">New Testament</string>
    <string name="title_home">Home</string>
    <string name="hintFastScrolling">Move your finger on the side to fast scrolling between the chapters, the sections on the verses</string>
    <string name="hintRicerca">Move your finger on the side to fast scrolling between the search results</string>
    <string name="hintVisto">Got it</string>
    <string name="parola_intera">Whole word</string>
    <string name="attenzione">Alert</string>
    <string name="errore">Error</string>
    <string name="errore_des">An error occurred</string>
    <string name="crediti">\u2022 <b>CEI 1974 Bible</b>: Public Domain according to Biblegateway
        \n\u2022 <b>Nova Vulgata Bible</b>: Public Domain
        \n\u2022 <b>Clementine Vulgata Bible</b>: Public Domain
        \n\u2022 <b>LXX Bible</b>: Public Domain
        \n\u2022 <b>Nestle 1904 Bible</b>: Public Domain. Thanks to https://sites.google.com/site/nestle1904/luke
        \n\u2022 <b>Catholic Public Domain Bible</b>: Public Domain
        \n\u2022 <b>WLC Bible</b>: Public Domain
        \n\u2022 <b>Italian and eglish introductions</b>: Property of the Foundation of Religion Saints Francis of Assisi and Catherine of Siena
        \n\u2022 <b>Italian footnotes</b>: Property of the Foundation of Religion Saints Francis of Assisi and Catherine of Siena
        \n\u2022 <b>English footnotes</b>: Public Domain
        \n\u2022 <b>Pray icon</b>: Cristiano Zoucas from the Noun Project
    </string>
    <string name="help">Help</string>
    <string name="helpRicerca">The search is case-insensitive.\nIt is possible to search with the following criteria:\n\n</string>
    <string name="helpRicerca1">Single word: will be displayed al the chapters containing that word. The accents will be ignored by defaults, unless you select the related options in the filter menu. E.g.: <b>Word</b>\n\n</string>
    <string name="helpRicerca2">More words: we will load all chapters containing both words, not necessarily close to each other. Words with less than three characters are ignored. Example: <b> Word flesh </b>\n\n</string>
    <string name="helpRicerca3">One or more non-whole words: selecting the \"Whole Word\" option in the Filter menu, you\'ll search all words that begin with the words entered. Example: <b> Wor fles</b>\n\n</string>
    <string name="helpRicerca4">More words in quotes:  we will search for the exact match of the words with their order, punctuation and any accents. Example: <b>\"The Word became flesh\"</b>\n\n</string>
    <string name="helpRicerca5">References: it is possible to search and view the readings indicating the initials of the book, chapter and verse. To separate the chapter number from the verses using the \"<b>,</b>\" while to separate verses with each other using the \"<b>.</b>.\" It is possible to specify a range using verses \"<b>-</b>.\" The various chapters or books can be separated with \"<b>;</b>\" or a space Example: <b>Mt21,15-19.24-26.29; 22,15.18-26; 1Cor 12.5-7</b></string>
    <string name="modifica_carattere">Edit the font</string>
    <string name="salva_segnalibri">Save in the bookmarks</string>
    <string name="rimuovi_segnalibri">Remove from the bookmarks</string>
    <string name="aggiuntoSegnalibroVersetto">A bookmark was added at the verse %1$s</string>
    <string name="rimossoSegnalibroVersetto">A bookmark was removed from the verse %1$s</string>
    <string name="aggiuntoSegnalibroVersetti">A bookmark was added to the range %1$s</string>
    <string name="cerca">Search</string>
    <string name="cambia_data">Go to date</string>
    <string name="filtra">Filter</string>
    <string name="aiuto">Help</string>
    <string name="ricerca_letture">Search readings</string>
    <string name="capitolo">Chapter %d</string>
    <string name="salmo">Psalm %d</string>
    <string name="riferimentoNonTrovato">No match was found.</string>
    <string name="abbreviazioni">Abbreviations</string>
    <string name="testo_segnalibri_home">View and organize your bookmarks</string>
    <string name="segnalibri_home">Bookmarks</string>
    <string name="letture_del_giorno">Daily Reading</string>
    <string name="oggi">Today</string>
    <string name="domani">Tomorrow</string>
    <string name="ieri">Yesterday</string>
    <string name="fra_giorni">In %1$s days</string>
    <string name="fa_giorni">%1$s days ago</string>
    <string name="scegliVersioneBibbia">Choose the version</string>
    <string name="scegliLettura">Choose the reading</string>
    <string name="nessunaLetturaDisponibile">No reading available</string>
    <string name="salva_piu_versetti">Save verses range</string>
    <string name="PreparazioneCorso">Loading</string>
    <string name="scegliVersetti">Chose the verses range</string>
    <string name="AnticoTestamentoVers">\"May receive instruction in wise conduct, in what is right, just and fair\"</string>
    <string name="AnticoTestamentoDesVer">Proverbs 1,3</string>
    <string name="NuovoTestamentoDes">\"I am the way and the truth and the life\"</string>
    <string name="NuovoTestamentoDesVer">John 14,6</string>
    <string name="CapitoloCasualeDes">The wind blows where it wills…</string>
    <string name="CapitoloCasuale">Choose the random chapter within a Testament</string>
    <string name="CapitoloCasualeShort">Random chapter</string>
    <string name="CapitoloMeno">%1$s - chapter %2$s</string>
    <string name="Cronologia">History</string>
    <string name="CronologiaVuota">Empty history</string>
    <string name="cancellaTutti">Delete all the bookmarks</string>
    <string name="vuoi_cancellare_segnalibri">Do you really want to delete all the bookmarks?</string>
    <string name="intro1">Welcome to App Catholic Bible. This short guide will show you the basic functions.</string>
    <string name="introCapitoloTitolo">Bookmarks</string>
    <string name="introCapitoloTesto">You can add a bookmark on chapter by pressing the star, on the single verse by pressing the number or a range of verses.</string>
    <string name="fine">The end</string>
    <string name="title_guida">Guide</string>
    <string name="introHome">From Home, you can read the Bible daily readings, a chapter at random, bookmarks and browsing history</string>
    <string name="introSegnalibriTitolo">Bookmarks manager</string>
    <string name="introRicercaTitolo">Search</string>
    <string name="introRicercaTesto">By pressing on the lens, you can search the Bible individual words, phrases and references, such as Mt1,5</string>
    <string name="introImpostazioni">From the side menu you can access Settings, which allow you to configure the app in many aspects</string>
    <string name="introFine">This guide can be called up from the side menu</string>
    <string name="inviaEmail">Write to the developer</string>
    <string name="oggettoMail">Catholic Bible App for Android</string>
    <string name="reimposta_preferenze">Reset settings to default values</string>
    <string name="reimposta_preferenze_short">Reset settings</string>
    <string name="info_short">Erase the cache</string>
    <string name="ignora_accenti">Ignore accent marks</string>
    <string name="ad_maiorem_dei_gloriam">AD MAIOREM DEI GLORIAM</string>
    <string name="credit_grafica">The graphics and content were reviewed by Dr. prof. Amerigo Muschi (MSc degree in Religious Sciences at the ISSR of Udine)</string>
    <string name="credit_app">The application was designed and developed by Flavio Barisi (MSc degree in Electronic Engineering at the University of Trieste).</string>
    <string name="sviluppatori">Developers</string>
    <string name="contenuti">Content</string>
    <string name="vaiA">Go to the chapter</string>
    <string name="cambia_versione_sinistra">Change left version</string>
    <string name="cambia_versione_destra">Change right version</string>
    <string name="aggiungi_terza_versione">Add a third version</string>
    <string name="smetti_leggi_alta_voce">Stop reading aloud</string>
    <string name="imp_mostra_num_capitoli_des">Show the number of chapters in the books list</string>
    <string name="imp_mostra_num_capitoli">Numbers of chapters</string>
    <string name="smetti_confronto">Stop comparing</string>
    <string name="maps">Maps</string>
    <string name="preghiere">Prayers</string>
    <string name="imp_velocita_lettura">Speech rate</string>
    <string name="imp_velocita_lettura_des">Set the speech rate</string>
</resources>