<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_font"
        android:icon="@drawable/ic_format_size_white_24dp"
        android:title="@string/modifica_carattere"
        myapp:showAsAction="always" />

    <item
        android:id="@+id/action_cambia_data"
        android:icon="@drawable/ic_date_range_white_24dp"
        android:title="@string/cambia_data"
        myapp:showAsAction="ifRoom" />

    <item
            android:id="@+id/action_cambia_versione_sinistra"
            android:icon="@drawable/ic_broom_white_24dp"
            android:title="@string/cambia_versione"
            myapp:showAsAction="never" />

    <item
            android:id="@+id/action_confronta"
            android:icon="@drawable/ic_broom_white_24dp"
            android:title="@string/confronta"
            myapp:showAsAction="never" />

    <item
        android:id="@+id/action_apri_contesto"
        android:icon="@drawable/ic_broom_white_24dp"
        android:title="@string/apri_contesto"
        myapp:showAsAction="never" />

    <item
        android:id="@+id/action_leggi_alta_voce"
        android:icon="@drawable/ic_broom_white_24dp"
        android:title="@string/smetti_leggi_alta_voce"
        myapp:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_broom_white_24dp"
        android:title="@string/share"
        myapp:showAsAction="never" />

</menu>