<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorePrincipaleScuro"
    tools:context="com.barisi.flavio.bibbiacattolica.fragments.CreditsFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contenuti"
                android:gravity="center"
                android:textColor="@color/oro"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/crediti"
                android:textColor="@color/bianco"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sviluppatori"
                android:gravity="center"
                android:textColor="@color/oro"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/credit_app"
                android:textColor="@color/bianco"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/credit_grafica"
                android:textColor="@color/bianco"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ad_maiorem_dei_gloriam"
                android:gravity="center"
                android:textColor="@color/oro"
                android:textSize="22sp"
                android:textStyle="normal|italic|bold" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
